@@ -64,7 +64,7 @@ strcpy (char* dst, const char* src)
        "ldr	r3, [r1], #4\n\t"
        "beq	2f\n\t"
        "sub	r2, r3, "magic1(r5)"\n\t"
-       "eors	r2, r2, r3\n\t"
+       "bics	r2, r2, r3\n\t"
        "tst	r2, "magic2(r5)"\n\t"
        "itt	eq\n\t"
        "streq	r3, [ip], #4\n\t"
@@ -78,12 +78,12 @@ strcpy (char* dst, const char* src)
        "optpld	r1, #8\n\t"
        "ldr	r4, [r1], #4\n\t"
        "sub	r2, r3, "magic1(r5)"\n\t"
-       "eors	r2, r2, r3\n\t"
+       "bics	r2, r2, r3\n\t"
        "tst	r2, "magic2(r5)"\n\t"
        "sub	r2, r4, "magic1(r5)"\n\t"
        "bne	1f\n\t"
        "str	r3, [ip], #4\n\t"
-       "eors	r2, r2, r4\n\t"
+       "bics	r2, r2, r4\n\t"
        "tst	r2, "magic2(r5)"\n\t"
        "itt	eq\n\t"
        "ldreq	r3, [r1], #4\n\t"
